--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="slider">
       <figure>
         <img src="Img/IMG-20221204-WA0015.jpg" alt="">
-        <img src="Img/WhatsApp Image 2024-04-07 at 5.48.22 PM.jpeg" alt="">
+        <img src="Img/IMG-20221213-WA0015.jpg" alt="">
         <img src="Img/WhatsApp Image 2024-04-07 at 5.48.23 PM.jpeg" alt="">
         <img src="Img/IMG-20250131-WA0272.jpg" alt="">
         <img src="Img/DSC_0135.JPG" alt="">
