--- a/index.html
+++ b/index.html
@@ -271,14 +271,14 @@ He teaches Social Science / Social Studies (SST) (i.e. History, Geography, Civic
     <button class="arrow left" id="leftBtn">❮</button>
 
     <div class="gallery-container">
-      <div class="gallery-card"><img src="img/IMG-20221214-WA0059.jpg" alt="Photo 1"></div>
-      <div class="gallery-card"><img src="img/IMG-20221213-WA0015.jpg" alt="Photo 2"></div>
-      <div class="gallery-card"><img src="img/IMG-20221213-WA0017.jpg" alt="Photo 3"></div>
-      <div class="gallery-card"><img src="img/IMG-20221214-WA0063.jpg" alt="Photo 4"></div>
-      <div class="gallery-card"><img src="img/DSC_0135.JPG" alt="Photo 5"></div>
-      <div class="gallery-card"><img src="img/IMG-20221214-WA0024.jpg" alt="Photo 6"></div>
-      <div class="gallery-card"><img src="img/IMG-20250131-WA0290.jpg" alt="Photo 7"></div> 
-      <div class="gallery-card"><img src="img/IMG-20250131-WA0272.jpg" alt="Photo 8"></div>     
+      <div class="gallery-card"><Img src="img/IMG-20221214-WA0059.jpg" alt="Photo 1"></div>
+      <div class="gallery-card"><Img src="img/IMG-20221213-WA0015.jpg" alt="Photo 2"></div>
+      <div class="gallery-card"><Img src="img/IMG-20221213-WA0017.jpg" alt="Photo 3"></div>
+      <div class="gallery-card"><Img src="img/IMG-20221214-WA0063.jpg" alt="Photo 4"></div>
+      <div class="gallery-card"><Img src="img/DSC_0135.JPG" alt="Photo 5"></div>
+      <div class="gallery-card"><Img src="img/IMG-20221214-WA0024.jpg" alt="Photo 6"></div>
+      <div class="gallery-card"><Img src="img/IMG-20250131-WA0290.jpg" alt="Photo 7"></div> 
+      <div class="gallery-card"><Img src="img/IMG-20250131-WA0272.jpg" alt="Photo 8"></div>     
     </div>
 
     <button class="arrow right" id="rightBtn">❯</button>
@@ -292,7 +292,7 @@ He teaches Social Science / Social Studies (SST) (i.e. History, Geography, Civic
   <section id="Video" class="video-section">
     <div class="container-max video-wrap">
       <video class="site-video" autoplay loop muted playsinline>
-        <source src="img/dbcvid.mp4" type="video/mp4">
+        <source src="Img/dbcvid.mp4" type="video/mp4">
       </video>
       <div class="video-title"><h2>School Tour</h2></div>
     </div>
