--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ He teaches Social Science / Social Studies (SST) (i.e. History, Geography, Civic
       <div class="gallery-card"><img src="Img/IMG-20221213-WA0015.jpg" alt="Photo 2"></div>
       <div class="gallery-card"><img src="Img/IMG-20221213-WA0017.jpg" alt="Photo 3"></div>
       <div class="gallery-card"><img src="Img/IMG-20221214-WA0063.jpg" alt="Photo 4"></div>
-      <div class="gallery-card"><img src="Img/DSC_0135.JPG" alt="Photo 5"></div>
+      <div class="gallery-card"><img src="Img/IMG-20250227-WA0046.jpg" alt="Photo 5"></div>
       <div class="gallery-card"><img src="Img/IMG-20221214-WA0024.jpg" alt="Photo 6"></div>
       <div class="gallery-card"><img src="Img/IMG-20250131-WA0290.jpg" alt="Photo 7"></div> 
       <div class="gallery-card"><img src="Img/IMG-20250131-WA0272.jpg" alt="Photo 8"></div>     
