--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Don Bosco Convent School - Akash</title>
-  <link rel="icon" href="Img/logo.jpeg" type="image/jpeg">
+  <link rel="icon" href="Img/4242 DBCSMDB lOGO.png" type="image/png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- HEADER / NAV -->
   <header id="header">
     <div class="nav-inner container-max">
+                      <a href="https://www.dbcschool.edu.in/" class="logo-link">
+    <img src="Img/4242 DBCSMDB lOGO.png" alt="School Logo" class="logo">
+  </a>
       <div class="brand">
         <span class="b-d">D</span>on <span class="b-b">B</span>osco <span class="b-c">C</span>onvent <span class="b-s">S</span>chool
       </div>
